@@ -7,7 +7,8 @@ ChangeLog
 GIT HEAD
 
 - Restrict to existing named presets when adding new or editing
-  existing programs (cf. Configure... > Programs). (EXPERIMENTAL)
+  programs; load and restore presets directly when previewing
+  programs (cf. Configure... > Programs). (EXPERIMENTAL)
 - NSM open and save operation failures are now replied with an
   error status (was always OK before). (EXPERIMENTAL)
 - JACK client watchdog introduced for automatic reactivation and
